--- a/app.css
+++ b/app.css
@@ -48,7 +48,7 @@ h1{
     font-size: 3em;
 }
 h2 {
-    color: #ADADAD;
+    color: #078BFF;
     font-size: 2em;
     font-family: cursive;
     text-align: center;
